--- a/electricblock/page2.html
+++ b/electricblock/page2.html
@@ -15,12 +15,18 @@
         <img src="img/2.png">
     </div>
 </div>
+<div class="log-cat">
+    <ul class="content"></ul>
+    <a class="close"></a>
+</div>
 <footer>
-    <a href="page2.html" class="button button-3d button-primary button-rounded">下一页</a>
+    <button id="btnCheckLine" class="button button-3d button-primary button-rounded">查看连接</button>
 </footer>
-<script src="http://cdn.bootcss.com/jquery/3.0.0/jquery.min.js"></script>
-<script src="js/components/line.js"></script>
-<script src="js/components/point.js"></script>
-<script src="js/index2.js"></script>
+<script src="js/sea.js"></script>
+<script src="js/seajs-preload.js"></script>
+<script src="js/init.js"></script>
+<script>
+
+</script>
 </body>
 </html>
